gcc/testsuite/rust/rustc/ui/error-codes/E0767_dg.rs
fn main() {
    'a: loop {
        || {
// { dg-error ".E0308." "" { target *-*-* } .-1 }
            loop { break 'a; } // { dg-error ".E0767." "" { target *-*-* } }
        }
    }
}

